cambio del titulo

--- a/index2.html
+++ b/index2.html
@@ -6,8 +6,9 @@
     <title>Sistema de ventas</title>
 </head>
 <body>
-    <h1>Encabezado</h1>
-    <hr>
+    <div>Encabezado</div>
+    <div>Menu</div>
+    <div><h1>Sistema de venta de ropa</h1></div>
     <div>Contenido</div>
     <div>Pie de pagina</div>
 </body>
