--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div>Encabezado</div>
-    <div>Menu</div>
+    <ul>
+        <li>Camisas</li>
+        <li>Pantalones</li>
+        <li>Playeras</li>
+    </ul>
     <div><h1>Sistema de venta de ropa</h1></div>
     <div>Contenido</div>
     <div>Pie de pagina</div>
