Nueva modificacion,agregando imageness nuevas

--- a/index2.html
+++ b/index2.html
@@ -6,14 +6,24 @@
     <title>Sistema de ventas</title>
 </head>
 <body>
-    <div>Encabezado</div>
-    <ul>
-        <li>Camisas</li>
-        <li>Pantalones</li>
-        <li>Playeras</li>
-    </ul>
-    <div><h1>Sistema de venta de ropa</h1></div>
-    <div>Contenido</div>
-    <div>Pie de pagina</div>
+    <div>
+        <h1> Sistema de ropa </h1>
+        </div>
+        <div>
+         menu
+        </div>
+        <ul>
+            <li> <a href="/camisas/camisa.html" target="contenedor"> Camisas </a </li>
+            <li> <a href="/pantalones/pantalon.html" target="contenedor"> Pantalones </a </li>
+            <li> <a href="/playeras/playera.html" target="contenedor"> Camisas </a </li>
+        </ul>
+    
+        <div>
+            <iframe src="/inicio.html" frameborder="0" name="contenedor" style="width: 400px; height: 600px;"></iframe>
+        
+        </div>
+        <div>
+        <a href="https://walmart.com" target="_blank">walmart</a>
+        </div>
 </body>
 </html>
