Cambio de letras

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
         <h1> Sistema de ropa </h1>
         </div>
         <div>
-         menu
+         <MENU></MENU>
         </div>
         <ul>
             <li> <a href="/camisas/camisa.html" target="contenedor"> Camisas </a </li>
