--- a/camisas/camisa.html
+++ b/camisas/camisa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,8 +6,9 @@
     <title>Camisas </title>
     <link rel="stylesheet" href="/css/principal.css">
 </head>
-<body>
-    <h1> Catalogo de camisas </h1>
+<body> -->
+
+    <h1> Catalogo de Camisas </h1>
     <div> <img src="/camisas/camisa1.jpg" alt=""></div>
 
     
@@ -15,5 +16,7 @@
 
     
     <div> <img src="/camisas/camisa3.jpeg" alt=""></div>
+    <!--
 </body>
 </html>
+-->
