--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
         <ul>
             <li> <a href="/camisas/camisa.html" target="contenedor"> Camisas </a </li>
             <li> <a href="/pantalones/pantalon.html" target="contenedor"> Pantalones </a </li>
-            <li> <a href="/playeras/playera.html" target="contenedor"> Camisas </a </li>
+            <li> <a href="/playeras/playera.html" target="contenedor"> Playeras </a </li>
         </ul>
     
         <div>
