--- a/playeras/playera.html
+++ b/playeras/playera.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/principal.css">
 </head>
 <body>
-    <h1> Catalogo de camisas </h1>
+    <h1> Catalogo de Playeras </h1>
     <div> <img src="/playeras/playera1.jpeg" alt=""></div>
 
     
