--- a/pantalones/pantalon.html
+++ b/pantalones/pantalon.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!-- 
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +8,8 @@
     <link rel="stylesheet" href="/css/principal.css">
 </head>
 <body>
-    <h1> Catalogo de camisas </h1>
+--> 
+    <h1> Catalogo de Pantalones </h1>
     <div> <img src="/pantalones/pantalon1.jpeg" alt=""></div>
 
     
@@ -15,5 +17,7 @@
 
     
     <div> <img src="/pantalones/pantalon3.jpeg" alt=""></div>
+<!--
 </body>
 </html>
+--> 
