Ya esta todo,modificado y concuerda con lo que tenemos en clase

--- a/camisas/camisa.html
+++ b/camisas/camisa.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <title>Camisas </title>
     <link rel="stylesheet" href="/css/principal.css">
 </head>
-<body> -->
+<body> 
 
     <h1> Catalogo de Camisas </h1>
     <div> <img src="/camisas/camisa1.jpg" alt=""></div>
@@ -19,4 +19,3 @@
     <!--
 </body>
 </html>
--->
