--- a/index3.html
+++ b/index3.html
@@ -15,15 +15,15 @@
 
                 <li>
                     <button onclick="ver('http://proweb2501v2.test/camisas/camisa.html')">
-                        Camisas
+                       CAMISAS
                     </button>
 
                     <button onclick="ver('http://proweb2501v2.test/pantalones/pantalon.html')">
-                        Pantalones
+                        PANTOLONES
                     </button>
 
                     <button onclick="ver('http://proweb2501v2.test/playeras/playera.html')">
-                        Playeras
+                        PLAYERAS
                     </button>
                 </li>
                 
@@ -34,9 +34,6 @@
         <div id ="cont1">
         </div>
 
-        <div>
-        <a href="https://walmart.com" target="_blank">WALMART</a>
-        </div>
 </body>
 
 <script>
